--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,12 @@ cache:
   directories:
     - "$HOME/.deno"
 
+before_deploy:
+  - ./release
+
 deploy:
-  provider: script
-  script: "./release"
+  provider: releases
+  api_key: "$GITHUB_TOKEN"
   on:
     branch: master
 
